# gojira

./: .gitignore  Makefile  README.md  pyproject.toml
src/: __main__.py  component.py  config.cfg  config.py  gerrit.py  jira.py  launcher.py
