[project]
name = "Gojira"
version = "0.1.0"
description = "CLI for Jira and Gerrit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "pycodestyle>=2.14.0",
    "pyinstaller>=6.17.0",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
]
